# classificador-mensagens-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/api/middlewares/: logging_middleware.py
src/api/v1/: dependencies.py
src/api/v1/endpoints/: classifier.py
src/core/: config.py  exceptions.py  logger.py
src/data/: examples.json
src/domain/: interfaces.py  models.py
src/providers/gemini/: client.py
src/schemas/: request.py  response.py
src/services/: intent_service.py  prompt_manager.py
